# python-project-lvl1

./: .gitignore  .travis.yaml  MakeFile  Makefile  README.MD  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml  hexlet-check.yml  pyci.yml
brain-games/: pyproject.toml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
